styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.svg-background-cover {
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  width: 100%;
}

.blurry-gradient {
  aspect-ratio: 900/450;
  background-image: url("/shapes/blurry-gradient-day.svg");
}

.blurry-gradient-night {
  aspect-ratio: 900/450;
  background-image: url("/shapes/blurry-gradient-night.svg");
}

.day {
  aspect-ratio: 900/100;
  background-image: url("/shapes/wave-day-top.svg");
}

.wave-night {
  aspect-ratio: 900/100;
  background-image: url("/shapes/wave-night-top.svg");
}

.day-bottom {
  aspect-ratio: 900/100;
  background-image: url("/shapes/wave-day-bottom.svg");
}

.wave-night-bottom {
  aspect-ratio: 900/100;
  background-image: url("/shapes/wave-night-bottom.svg");
}

.about-me-transition {
  aspect-ratio: 900/200;
  background-image: url("/shapes/wave-about-me-transition.svg");
}

.about-me-transition-night {
  aspect-ratio: 900/200;
  background-image: url("/shapes/wave-night-about-me-transition.svg");
}

.text-gradient {
  background: linear-gradient(to bottom, rgb(244 114 182), rgb(30 64 175));
  background-clip: text;

  -webkit-background-clip: text;
  -moz-background-clip: text;

  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
}

